--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,65 @@
 @import "UTF-8";
+
+*, *::before, *::after {
+    box-sizing: border-box;
+    font-family: "Jetbrains Mono";
+}
+
+body {
+    background-image: url(https://images.unsplash.com/photo-1475274047050-1d0c0975c63e?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+#container {
+    border: 5px solid #fcfffc;
+    border-radius: 25px;
+    height: 575px;
+    width: 440px;
+    margin: auto;
+    margin-top: 140px;
+}
+
+#display {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    border: 5px solid #fcfffc;
+    border-radius: 20px;
+    width: 90%;
+    height: 100px;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#display-digits {
+    margin-right: 10px;
+    font-size: 57px;
+    color: #fcfffc;
+}
+
+.rows {
+    display: flex;
+    width: 89%;
+    margin: auto;
+    column-gap: 14px;
+    row-gap: 15px;
+}
+
+.buttons {
+    font-size: 1.5rem;
+    color: #fcfffc;
+    background: none;
+    display: flex;
+    flex-basis: 25%;
+    justify-content: center;
+    border: 4px solid #fcfffc;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
+}
+
+.buttons:active {
+    box-shadow: 0 0 7px #fcfffc;
+    text-shadow: 0 0 7px #fcfffc;
+}
+
