--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-@import "UTF-8";
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family: "Jetbrains Mono";
+    font-family: "Jetbrains Mono", monospace, sans-serif;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
 #container {
     border: 5px solid #fcfffc;
     border-radius: 25px;
-    height: 575px;
+    height: 565px;
     width: 440px;
     margin: auto;
     margin-top: 140px;
@@ -33,19 +34,20 @@ body {
 
 #display-digits {
     margin-right: 10px;
-    font-size: 57px;
+    font-size: 60px;
     color: #fcfffc;
 }
 
 .rows {
     display: flex;
+    flex-basis: 25%;
     width: 89%;
-    margin: auto;
-    column-gap: 14px;
-    row-gap: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    column-gap: 13px;
 }
 
-.buttons {
+.btns {
     font-size: 1.5rem;
     color: #fcfffc;
     background: none;
@@ -55,11 +57,16 @@ body {
     border: 4px solid #fcfffc;
     border-radius: 8px;
     padding: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 13px;
 }
 
-.buttons:active {
+.btns.special-btns {
+    color: #b8b8ff;
+}
+
+.btns:active {
     box-shadow: 0 0 7px #fcfffc;
     text-shadow: 0 0 7px #fcfffc;
 }
+
 
